[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["renderchat"]

[project]
name = "renderchat"
version = "0.1.0"
description = "Render ChatGPT or Claude conversations into a single static HTML page with easy XML export"
readme = "README.md"
license = {text = "0BSD"}

authors = [
    {name = "Blazej Manczak"},
]
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.8.2",
    "pygments>=2.19.2",
    "markdownify>=0.11.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
renderchat = "renderchat:main"

[project.urls]
Homepage = "https://github.com/yourusername/renderchat"
Repository = "https://github.com/yourusername/renderchat"

